update posp textures

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_aek.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_aek.ltx
@@ -96,7 +96,19 @@ item_visual                              = dynamics\weapons\wpn_aek971\wpn_aek97
         aim_hud_offset_rot               = -0.020209, -0.012382, 0
         aim_hud_offset_rot_16x9          = -0.020209, -0.012382, 0
 
-;----------------------------------------------------------------------------------------
+;----------------------------------------------------------------------------------------	
 [wpn_aek_pso1m21]:wpn_aek_pso2	
-1icon_layer			    = pso1m21
+hud				= wpn_aek_pso1m21_hud
+
+1icon_layer			    = pso1m21		
+
+        scope_zoom_factor                = 20
+        scope_texture                    =
 		
+[wpn_aek_pso1m21_hud]:wpn_aek_pso2_hud
+item_visual                              = dynamics\weapons\wpn_aek971\wpn_aek971_pso1m21_hud.ogf
+
+        aim_hud_offset_pos               = -0.065973, 0.004849, -0.056445
+        aim_hud_offset_pos_16x9          = -0.065973, 0.004849, -0.056445
+        aim_hud_offset_rot               = -0.028169, -0.012506, 0
+        aim_hud_offset_rot_16x9          = -0.028169, -0.012506, 0
