--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak74_pmc.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak74_pmc.ltx
@@ -228,5 +228,17 @@ zoom_step_count=1
 
 ;----------------------------------------------------------------------------------------	
 [wpn_ak74_pmc_pso1m21]:wpn_ak74_pmc_pso2	
-1icon_layer			    = pso1m21			
+hud				= wpn_ak74_pmc_pso1m21_hud
 
+1icon_layer			    = pso1m21		
+
+        scope_zoom_factor                = 20
+        scope_texture                    =
+		
+[wpn_ak74_pmc_pso1m21_hud]:wpn_ak74_pmc_pso2_hud
+item_visual                	= dynamics\weapons\wpn_ak74_pmc\wpn_ak74_pmc_pso1m21_hud.ogf
+
+        aim_hud_offset_pos               = -0.07227, 0.02113, -0.066744
+        aim_hud_offset_pos_16x9          = -0.07227, 0.02113, -0.066744
+        aim_hud_offset_rot               = 0.009768, 0.009467, -0.01
+        aim_hud_offset_rot_16x9          = 0.009768, 0.009467, -0.01
