--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak74m_beard.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak74m_beard.ltx
@@ -142,5 +142,22 @@ lewd_lens_hide_aim_mode      = true, false, false
 
 ;----------------------------------------------------------------------------------------	
 [wpn_ak74m_beard_pso1m21]:wpn_ak74m_beard_pso2	
-1icon_layer			    = pso1m21	
+hud				= wpn_ak74m_beard_pso1m21_hud
+
+1icon_layer			    = pso1m21		
+
+        scope_zoom_factor                = 20
+        scope_texture                    =
 		
+[wpn_ak74m_beard_pso1m21_hud]:wpn_ak74m_beard_pso2_hud
+item_visual                	= dynamics\weapons\wpn_ak74m_beard\wpn_ak74m_beard_pso1m21_hud.ogf
+
+        aim_hud_offset_pos               = -0.070144, 0.010304, -0.064263
+        aim_hud_offset_pos_16x9          = -0.070144, 0.010304, -0.064263
+        aim_hud_offset_rot               = 0.009366, 0.008203, -0.01
+        aim_hud_offset_rot_16x9          = 0.009366, 0.008203, -0.01
+		
+        aim_hud_offset_alt_pos           = -0.065323, -0.093448, -0.045365
+        aim_hud_offset_alt_pos_16x9      = -0.065323, -0.093448, -0.045365
+        aim_hud_offset_alt_rot           = -0.008035, 0.015647, 0.5
+        aim_hud_offset_alt_rot_16x9      = -0.008035, 0.015647, 0.5
