--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_fal_aus.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_fal_aus.ltx
@@ -10,9 +10,8 @@ scope_texture                    =
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 1.5
 	s3ds_exit_pupil		= 0.55	
-	s3ds_chroma_power	= 0.031		
+	s3ds_chroma_power	= 0.031	
 	s3ds_reticle_type 	= 0
-	magnification 		= 2.8
 
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
@@ -20,6 +19,9 @@ lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
 		
 ![wpn_fal_aus_kit_aus_tri_hud]
+anm_shots               	= fal_aus_eft_ins_shoot_3dss, shoot
+anm_shots_aim              	= fal_aus_eft_ins_shoot_aim_3dss, shoot
+
         aim_hud_offset_pos               = -0.072365, -0.012918, -0.161738
         aim_hud_offset_pos_16x9          = -0.072365, -0.012918, -0.161738
         aim_hud_offset_rot               = -0.013584, -0.017337, 0
@@ -38,13 +40,12 @@ scope_dynamic_zoom               = on
 scope_status                	 = 1	
 zoom_step_count					 = 1
 
-	s3ds_reticle_size 	= 4.5
+	s3ds_reticle_size 	= 6.1
 	s3ds_eye_relief 	= 2
 	s3ds_chroma_power	= 0.04	
 	s3ds_reticle_type 	= 4
 	ms_count 			= 3
 	ms_colors			= scope_black, scope_red_dim, scope_red
-	magnification 		= 4	
 	
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
@@ -73,9 +74,8 @@ scope_status                	 = 1
 
 	s3ds_reticle_size 	= 4.35
 	s3ds_eye_relief 	= 4
-	s3ds_exit_pupil		= 0.6	
+	s3ds_exit_pupil		= 0.4	
 	s3ds_ffp			= 1	
-	magnification 		= 8
 
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
