--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_fn2000_nimble.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_fn2000_nimble.ltx
@@ -15,7 +15,7 @@ lewd_lens_hide_aim_mode      = true, false, false
 ![wpn_fn2000_nimble_acog]
 scope_zoom_factor                = 42.86
 scope_texture                    =
-scope_status                     = 1.
+scope_status                     = 1
 		
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 1.5
@@ -34,7 +34,6 @@ scope_texture                    =
 		
 	s3ds_reticle_size 	= 6.1
 	s3ds_eye_relief 	= 2
-	s3ds_chroma_power	= 0.04	
 
 ![wpn_fn2000_nimble_specter_hud]
         aim_hud_offset_alt_pos           = -0.073941, -0.023466, -0.149632
@@ -51,10 +50,8 @@ scope_zoom_factor                = 15
 scope_texture                    =
 		
 	s3ds_reticle_size 	= 4.35
-	s3ds_exit_pupil		= 0.4	
-	s3ds_ffp			= 1	
-
-
+	s3ds_exit_pupil		= 0.4
+	s3ds_ffp			= 1
 ![wpn_fn2000_nimble_leupold_hud]
         aim_hud_offset_pos               = -0.073211, 0.002741, -0.082004
         aim_hud_offset_pos_16x9          = -0.073211, 0.002741, -0.082004
@@ -69,7 +66,6 @@ nv_scope_status 				 = 0
 			
 	s3ds_reticle_size 	= 4.38
 	s3ds_eye_relief 	= 1.98
-	s3ds_chroma_power	= 0.05	
 	
 ![wpn_fn2000_nimble_pn23_hud]
         aim_hud_offset_pos               = -0.073217, -0.005385, -0.143306
@@ -84,7 +80,7 @@ scope_texture                    =
 		
 	s3ds_reticle_size 	= 4.9
 	s3ds_eye_relief 	= 3.1
-	s3ds_ffp			= 1	
+	s3ds_ffp			= 1
 
 ![wpn_fn2000_nimble_marchf_hud]
         aim_hud_offset_pos               = -0.073297, 0.005285, -0.097145
@@ -124,7 +120,10 @@ hud                                      = wpn_fn2000_nimble_t12_hud
 1icon_layer_x                            = 95
 1icon_layer_y                            = -14
 
-	s3ds_reticle_size 	= 1.95
+	s3ds_reticle_size 	= 1.05
+	s3ds_image_type 	= 3
+	s3ds_reticle_type 	= 8
+	s3ds_min_zoom_1x	= 1
 	
 [wpn_fn2000_nimble_t12_hud]:wpn_fn2000_nimble_hud
 item_visual				= anomaly_weapons\wpn_fn2000\wpn_fn2000_nimble_t12_hud.ogf
