--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_mosin.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_mosin.ltx
@@ -11,6 +11,10 @@ lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = wpn_scope02
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false	
+![wpn_mosin_hud]
+        aim_hud_offset_rot               = -0.000426, 0.008857, 0
+        aim_hud_offset_rot_16x9          = -0.000426, 0.008857, 0
+		
 ![wpn_mosin_wpn_addon_scope_pu]
 scope_zoom_factor                = 34.3
 scope_texture                    =
@@ -21,8 +25,11 @@ use_alt_aim_hud                  = true
         item_visual                 = anomaly_weapons\wpn_mosin\wpn_mosin_pu_hud.ogf
         aim_hud_offset_pos               = -0.091358, 0.009407, -0.232919
         aim_hud_offset_pos_16x9          = -0.091358, 0.009407, -0.232919
-        aim_hud_offset_rot               = 0.00361, 0.005243, 0
-        aim_hud_offset_rot_16x9          = 0.00361, 0.005243, 0
+        aim_hud_offset_rot               = 0.00361, 0.005031, 0
+        aim_hud_offset_rot_16x9          = 0.00361, 0.005031, 0 
+
+        aim_hud_offset_alt_rot           = -0.000355, 0.008859, 0
+        aim_hud_offset_alt_rot_16x9      = -0.000355, 0.008859, 0       
 		
 ;-----------------------------------------------------------------------------------------------
 [wpn_mosin_snd_silencer_shot]
