--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_p90gamma.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_p90gamma.ltx
@@ -5,6 +5,11 @@ lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = line
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
+![wpn_p90gamma_hud]
+        aim_hud_offset_alt_pos           = -0.024264, -0.049716, -0.01
+        aim_hud_offset_alt_pos_16x9      = -0.024264, -0.049716, -0.01
+        aim_hud_offset_alt_rot           = -0.001858, 0.011545, 0.5
+        aim_hud_offset_alt_rot_16x9      = -0.001858, 0.011545, 0.5
 
 ![wpn_p90gamma_specter]
 zoom_step_count=1
@@ -102,8 +107,6 @@ hud                                      = wpn_p90gamma_t12_hud
 1icon_layer                              = t12
 1icon_layer_x                            = 130
 1icon_layer_y                            = -18
-
-s3ds_reticle_size 	= 1.95
 
 [wpn_p90gamma_t12_hud]:wpn_p90gamma_hud
 item_visual                              = dynamics\weapons\wpn_p90gamma\wpn_p90gamma_t12_hud.ogf
