--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_abakan_n.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_abakan_n.ltx
@@ -83,7 +83,7 @@ inv_weight				= 4.430
 zoom_rotate_time		= 0.25
 use_alt_aim_hud         = true
 
-scope_status                      = 1
+scope_status                     = 1
 scope_dynamic_zoom               = on
 scope_zoom_factor                = 12
 min_scope_zoom_factor			 = 45		
@@ -104,4 +104,17 @@ aim_hud_offset_alt_rot_16x9                  = 0.0005, 0.0003, -0.015
 
 ;----------------------------------------------------------------------------------------	
 [wpn_abakan_n_pso1m21]:wpn_abakan_n_pso2	
+hud				= wpn_abakan_n_pso1m21_hud
+
 1icon_layer			    = pso1m21		
+
+        scope_zoom_factor                = 20
+        scope_texture                    =
+		
+[wpn_abakan_n_pso1m21_hud]:wpn_abakan_n_pso2
+item_visual                	= dynamics\weapons\wpn_abakan_n\wpn_abakan_n_pso1m21_hud.ogf
+
+        aim_hud_offset_pos               = -0.061441, 0.007787, -0.027739
+        aim_hud_offset_pos_16x9          = -0.061441, 0.007787, -0.027739
+        aim_hud_offset_rot               = 0.000424, -0.005126, -0.015
+        aim_hud_offset_rot_16x9          = 0.000424, -0.005126, -0.015
