--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak103.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak103.ltx
@@ -207,8 +207,32 @@ item_visual                		= anomaly_weapons\wpn_ak103\wpn_ak103_ps02_hud.ogf
         aim_hud_offset_alt_rot               = 0.002629, 0.000751, 0
         aim_hud_offset_alt_rot_16x9          = 0.002629, 0.000751, 0
 ;---------------------------------------------------------------------------------------------------
-[wpn_ak103_pso1m21]:wpn_ak103_pso2	
-1icon_layer			    = pso1m21			
+[wpn_ak103_pso1m21]:wpn_ak103
+hud                                      = wpn_ak103_pso1m21_hud
+
+1icon_layer                              = pso1m21
+1icon_layer_x                            = 35
+1icon_layer_y                            = 0
+
+inv_weight                               = 4.2
+
+scope_status            = 1
+scope_zoom_factor       = 20
+zoom_rotate_time		= 0.25
+
+use_alt_aim_hud			= true
+[wpn_ak103_pso1m21_hud]:wpn_ak103_hud
+
+item_visual                		= anomaly_weapons\wpn_ak103\wpn_ak103_pso1m21_hud.ogf
+        aim_hud_offset_pos               = -0.054884, 0.009599, -0.030588
+        aim_hud_offset_pos_16x9          = -0.054884, 0.009599, -0.030588
+        aim_hud_offset_rot               = 0.003655, -0.003517, 0
+        aim_hud_offset_rot_16x9          = 0.003655, -0.003517, 0
+
+        aim_hud_offset_alt_pos               = -0.066647, 0.027856, -0.062392
+        aim_hud_offset_alt_pos_16x9          = -0.066647, 0.027856, -0.062392
+        aim_hud_offset_alt_rot               = 0.002629, 0.000751, 0
+        aim_hud_offset_alt_rot_16x9          = 0.002629, 0.000751, 0				
 ;---------------------------------------------------------------------------------------------------
 [wpn_ak103_usp1]:wpn_ak103_1p29
 1icon_layer			    = usp1	
