--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak5c_bas_tik.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak5c_bas_tik.ltx
@@ -1,5 +1,5 @@
 ![wpn_ak5c_bas_5c_tik]
-scopes					= gauss_sight
+scopes					= gauss_sight, t12
 
 	s3ds_reticle_size 	= 4.6
 	s3ds_eye_relief 	= 2
@@ -8,7 +8,6 @@ scopes					= gauss_sight
 	s3ds_reticle_type 	= 1
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red	
-	magnification 		= 6
 	
 scope_zoom_factor                = 15
 scope_texture                    =
@@ -38,18 +37,33 @@ hud                                      = wpn_ak5c_bas_5c_tik_t12_hud
 1icon_layer_x                            = 35
 1icon_layer_y                            = -28
 
-	!s3ds_reticle_size 	
+scope_zoom_factor		= 0
+scope_status 			= 0
+scope_dynamic_zoom		= off
+
 	!s3ds_eye_relief 	
 	!s3ds_exit_pupil	
 	!s3ds_chroma_power			
 	!s3ds_reticle_type 	
 	!ms_count 			
 	!ms_colors 				
-	!magnification 		
-
+	
+	s3ds_reticle_size 	= 1.05
+	s3ds_image_type 	= 3
+	s3ds_reticle_type 	= 8
+	s3ds_min_zoom_1x	= 1	
+	
 [wpn_ak5c_bas_5c_tik_t12_hud]:wpn_ak5c_bas_5c_tik_hud
         item_visual                 = dynamics\weapons\wpn_ak5c_bas\wpn_ak5c_5c_tik_t12_hud.ogf
-	
+
+        aim_hud_offset_rot               = 0.008137, 0.004986, 0
+        aim_hud_offset_rot_16x9          = 0.008137, 0.004986, 0
+		
+        aim_hud_offset_alt_pos           = -0.079321, -0.055301, -0.089539
+        aim_hud_offset_alt_pos_16x9      = -0.079321, -0.055301, -0.089539
+        aim_hud_offset_alt_rot           = 0.002896, 0.01616, 0.75
+        aim_hud_offset_alt_rot_16x9      = 0.002896, 0.01616, 0.75
+		
 ;----------------------------------------------------------------------------------------
 [wpn_ak5c_bas_5c_tik_gauss_sight]:wpn_ak5c_bas_5c_tik
 hud						= wpn_ak5c_bas_5c_tik_gauss_sight_hud
@@ -72,8 +86,6 @@ scope_zoom_factor                = 12
 	s3ds_reticle_type 	= 6
 	ms_count 			= 2
 	ms_colors 			=
-	magnification 		= 10
-    min_magnification	= 
 	
 [wpn_ak5c_bas_5c_tik_gauss_sight_hud]:wpn_ak5c_bas_5c_tik_hud
         item_visual                 = dynamics\weapons\wpn_ak5c_bas\wpn_ak5c_5c_tik_gauss_hud.ogf
@@ -82,3 +94,7 @@ scope_zoom_factor                = 12
         aim_hud_offset_rot               = 0.015775, 0.005487, 0
         aim_hud_offset_rot_16x9          = 0.015775, 0.005487, 0
 		
+        aim_hud_offset_alt_pos           = -0.079321, -0.055301, -0.089539
+        aim_hud_offset_alt_pos_16x9      = -0.079321, -0.055301, -0.089539
+        aim_hud_offset_alt_rot           = 0.002896, 0.01616, 0.75
+        aim_hud_offset_alt_rot_16x9      = 0.002896, 0.01616, 0.75
