--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak74.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak74.ltx
@@ -207,7 +207,25 @@ item_visual                		= anomaly_weapons\wpn_ak74\wpn_ak74_ps02_hud.ogf
         aim_hud_offset_alt_rot_16x9          = 0.002629, 0.000751, 0
 ;---------------------------------------------------------------------------------------------------
 [wpn_ak74_pso1m21]:wpn_ak74_pso2	
-1icon_layer			    = pso1m21			
+hud				= wpn_ak74_pso1m21_hud
+
+1icon_layer			    = pso1m21		
+
+        scope_zoom_factor                = 20
+        scope_texture                    =
+		
+[wpn_ak74_pso1m21_hud]:wpn_ak74_pso2_hud
+item_visual                		= anomaly_weapons\wpn_ak74\wpn_ak74_pso1m21_hud.ogf
+
+        aim_hud_offset_pos               = -0.054884, 0.009599, -0.030588
+        aim_hud_offset_pos_16x9          = -0.054884, 0.009599, -0.030588
+        aim_hud_offset_rot               = 0.003813, -0.003927, 0
+        aim_hud_offset_rot_16x9          = 0.003813, -0.003927, 0
+
+        aim_hud_offset_alt_pos               = -0.066647, 0.027856, -0.062392
+        aim_hud_offset_alt_pos_16x9          = -0.066647, 0.027856, -0.062392
+        aim_hud_offset_alt_rot               = 0.002629, 0.000751, 0
+        aim_hud_offset_alt_rot_16x9          = 0.002629, 0.000751, 0			
 ;---------------------------------------------------------------------------------------------------
 [wpn_ak74_usp1]:wpn_ak74_1p29
 1icon_layer			    = usp1	
