--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak74m.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak74m.ltx
@@ -225,8 +225,32 @@ item_visual                		= anomaly_weapons\wpn_ak74m\wpn_ak74m_ps02_hud.ogf
         aim_hud_offset_alt_rot               = 0.002629, 0.000751, 0
         aim_hud_offset_alt_rot_16x9          = 0.002629, 0.000751, 0
 ;---------------------------------------------------------------------------------------------------
-[wpn_ak74m_pso1m21]:wpn_ak74m_pso2	
-1icon_layer			    = pso1m21			
+[wpn_ak74m_pso1m21]:wpn_ak74m
+hud                                      = wpn_ak74m_pso1m21_hud
+
+1icon_layer                              = pso1m21
+1icon_layer_x                            = 35
+1icon_layer_y                            = 0
+
+inv_weight                               = 4.12
+
+scope_status            = 1
+scope_zoom_factor       = 20
+zoom_rotate_time		= 0.25
+
+use_alt_aim_hud			= true
+[wpn_ak74m_pso1m21_hud]:wpn_ak74m_hud
+
+item_visual                		= anomaly_weapons\wpn_ak74m\wpn_ak74m_pso1m21_hud.ogf
+        aim_hud_offset_pos               = -0.054884, 0.009599, -0.030588
+        aim_hud_offset_pos_16x9          = -0.054884, 0.009599, -0.030588
+        aim_hud_offset_rot               = 0.003835, -0.004709, 0
+        aim_hud_offset_rot_16x9          = 0.003835, -0.004709, 0
+
+        aim_hud_offset_alt_pos               = -0.066647, 0.027856, -0.062392
+        aim_hud_offset_alt_pos_16x9          = -0.066647, 0.027856, -0.062392
+        aim_hud_offset_alt_rot               = 0.002629, 0.000751, 0
+        aim_hud_offset_alt_rot_16x9          = 0.002629, 0.000751, 0					
 ;---------------------------------------------------------------------------------------------------
 [wpn_ak74m_usp1]:wpn_ak74m_1p29
 1icon_layer			    = usp1	
