--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak74u.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak74u.ltx
@@ -171,8 +171,27 @@ item_visual                		= anomaly_weapons\wpn_ak74u\wpn_ak74u_ps02_hud.ogf
         aim_hud_offset_rot               = 0.003835, -0.004709, 0
         aim_hud_offset_rot_16x9          = 0.003835, -0.004709, 0
 ;---------------------------------------------------------------------------------------------------
-[wpn_ak74u_pso1m21]:wpn_ak74u_pso2	
-1icon_layer			    = pso1m21			
+[wpn_ak74u_pso1m21]:wpn_ak74u
+hud                                      = wpn_ak74u_pso1m21_hud
+
+1icon_layer                              = pso1m21
+1icon_layer_x                            = 35
+1icon_layer_y                            = 0
+
+inv_weight                               = 4.12
+
+scope_status            = 1
+scope_zoom_factor       = 20
+zoom_rotate_time		= 0.25
+
+use_alt_aim_hud			= true
+[wpn_ak74u_pso1m21_hud]:wpn_ak74u_hud
+
+item_visual                		= anomaly_weapons\wpn_ak74u\wpn_ak74u_pso1m21_hud.ogf
+        aim_hud_offset_pos               = -0.054884, 0.009599, -0.030588
+        aim_hud_offset_pos_16x9          = -0.054884, 0.009599, -0.030588
+        aim_hud_offset_rot               = 0.003781, -0.003926, 0
+        aim_hud_offset_rot_16x9          = 0.003781, -0.003926, 0
 ;---------------------------------------------------------------------------------------------------
 [wpn_ak74u_usp1]:wpn_ak74u_1p29
 1icon_layer			    = usp1	
