--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak74u_tac.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_ak74u_tac.ltx
@@ -9,11 +9,11 @@ lewd_lens_hide_aim_mode      = true, false, false
 ![wpn_ak74u_tac_hud] 
 anm_shots               		= wpn_hand_aksu_tact_shoot_3dss, wpn_aksu_tact_shoot
 
-        aim_hud_offset_alt_pos           = -0.065307, -0.056199, 0
-        aim_hud_offset_alt_pos_16x9      = -0.065307, -0.056199, 0
-        aim_hud_offset_alt_rot           = -0.003716, 0.006947, 0.75
-        aim_hud_offset_alt_rot_16x9      = -0.003716, 0.006947, 0.75
-
+        aim_hud_offset_alt_pos           = -0.085772, -0.050158, 0.043667
+        aim_hud_offset_alt_pos_16x9      = -0.085772, -0.050158, 0.043667
+        aim_hud_offset_alt_rot           = 0.002578, 0.014747, 0.65
+        aim_hud_offset_alt_rot_16x9      = 0.002578, 0.014747, 0.65
+		
 ![wpn_ak74u_tac_1p29]
         scope_zoom_factor                = 30
         scope_texture                    =
@@ -115,5 +115,17 @@ anm_shots               		= wpn_hand_aksu_tact_shoot_3dss, wpn_aksu_tact_shoot
 
 ;----------------------------------------------------------------------------------------		
 [wpn_ak74u_tac_pso1m21]:wpn_ak74u_tac_pso2	
+hud				= wpn_ak74u_tac_pso1m21_hud
+
 1icon_layer			    = pso1m21		
-	
+
+        scope_zoom_factor                = 20
+        scope_texture                    =
+		
+[wpn_ak74u_tac_pso1m21_hud]:wpn_ak74u_tac_pso2_hud
+item_visual                	= dynamics\weapons\wpn_ak74u_tac\wpn_ak74u_tac_pso1m21_hud.ogf
+
+        aim_hud_offset_pos               = -0.040554, 0.011087, -0.021276
+        aim_hud_offset_pos_16x9          = -0.040554, 0.011087, -0.021276
+        aim_hud_offset_rot               = 0.008598, 0.004758, 0
+        aim_hud_offset_rot_16x9          = 0.008598, 0.004758, 0
