--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_aug_freedom.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_aug_freedom.ltx
@@ -156,7 +156,10 @@ hud                                      = wpn_aug_freedom_t12_hud
 1icon_layer_x                            = 102
 1icon_layer_y                            = -18
 
-	s3ds_reticle_size 	= 1.9
+	s3ds_reticle_size 	= 1.05
+	s3ds_image_type 	= 3
+	s3ds_reticle_type 	= 8
+	s3ds_min_zoom_1x	= 1
 	
 [wpn_aug_freedom_t12_hud]:wpn_aug_freedom_hud
 item_visual                              = anomaly_weapons\wpn_aug_9mm\wpn_aug_9mm_t12_hud.ogf
