--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_groza.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_groza.ltx
@@ -27,7 +27,10 @@ lewd_lens_hide_aim_mode      = true, false, false
 	s3ds_reticle_size = 4
 	s3ds_eye_relief = 4
 	s3ds_exit_pupil = 0.3
-	
+![wpn_groza_nimble_hud]
+        aim_hud_offset_alt_rot           = 0.016276, 0.021668, 0.624496
+        aim_hud_offset_alt_rot_16x9      = 0.016276, 0.021668, 0.624496
+		
 ![wpn_groza_nimble_pn23]
 scope_zoom_factor                = 20
 scope_texture                    =
@@ -161,12 +164,15 @@ hud                                      = wpn_groza_nimble_t12_hud
 1icon_layer_x                            = 100
 1icon_layer_y                            = -18
 
-	s3ds_reticle_size 	= 2
+	s3ds_reticle_size 	= 1.05
+	s3ds_image_type 	= 3
+	s3ds_reticle_type 	= 8
+	s3ds_min_zoom_1x	= 1
 
 [wpn_groza_nimble_t12_hud]:wpn_groza_nimble_hud
 item_visual				= anomaly_weapons\wpn_groza\wpn_groza_nimble_t12_hud.ogf
         aim_hud_offset_pos               = 0.01317, 0.002777, 0.016308
         aim_hud_offset_pos_16x9          = 0.01317, 0.002777, 0.016308
-        aim_hud_offset_rot               = 0.023695, 0.013519, 0
-        aim_hud_offset_rot_16x9          = 0.023695, 0.013519, 0
+        aim_hud_offset_rot               = 0.025265, 0.013167, 0
+        aim_hud_offset_rot_16x9          = 0.025265, 0.013167, 0
 		
