--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_rpk74.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_rpk74.ltx
@@ -219,8 +219,35 @@ item_visual                		= anomaly_weapons\wpn_rpk\wpn_rpk74_pso2_hud.ogf
         aim_hud_offset_alt_rot                       = 0.002131, -0.06639, 0
         aim_hud_offset_alt_rot_16x9                  = 0.002131, -0.06639, 0	
 ;---------------------------------------------------------------------------------------------------
-[wpn_rpk74_pso1m21]:wpn_rpk74_pso2	
-1icon_layer			    = pso1m21			
+[wpn_rpk74_pso1m21]:wpn_rpk74
+hud                                      = wpn_rpk74_pso1m21_hud
+
+1icon_layer                              = pso1m21
+1icon_layer_x                            = 35
+1icon_layer_y                            = 0
+
+inv_weight                               = 5.44
+
+scope_status            = 1
+scope_zoom_factor       = 20
+zoom_rotate_time		= 0.25
+
+	s3ds_eye_relief 	= 2
+	s3ds_exit_pupil		= 0.5	
+	
+use_alt_aim_hud			= true
+[wpn_rpk74_pso1m21_hud]:wpn_rpk74_hud
+
+item_visual                		= anomaly_weapons\wpn_rpk\wpn_rpk74_pso1m21_hud.ogf
+        aim_hud_offset_pos               = -0.040225, 0.000438, -0.012168
+        aim_hud_offset_pos_16x9          = -0.040225, 0.000438, -0.012168
+        aim_hud_offset_rot               = 0.003835, -0.070637, 0
+        aim_hud_offset_rot_16x9          = 0.003835, -0.070637, 0
+
+		aim_hud_offset_alt_pos                       = -0.050598, 0.016392, -0.046789
+        aim_hud_offset_alt_pos_16x9                  = -0.050598, 0.016392, -0.046789
+        aim_hud_offset_alt_rot                       = 0.002131, -0.06639, 0
+        aim_hud_offset_alt_rot_16x9                  = 0.002131, -0.06639, 0		
 ;---------------------------------------------------------------------------------------------------
 [wpn_rpk74_usp1]:wpn_rpk74_1p29
 1icon_layer			    = usp1	
