--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_saiga12_m1.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_saiga12_m1.ltx
@@ -1,34 +1,39 @@
-;==============================================================================	
 ![wpn_saiga12s_m1]
->scopes                      = 1p63, pso2, pso1m21, 1pn93n2_1gs, 1pn93, usp1, 1p78gs, 1p29, ps01
+>scopes                      = 1p63, pso2, 1pn93n2_1gs, 1pn93, usp1, 1p78gs, 1p29, ps01
 
 lewd_lens_hide_enabled       = true
-lewd_lens_hide_bone          = launcher_sight
+lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
+
+use_alt_aim_hud              = false
+
+visual                                   = dynamics\weapons\wpn_saiga12s_m1\wpn_saiga12s_m1_world.ogf
 
 ![wpn_saiga12s_m1_pka]
 		scope_status                     = 1
 		scope_lense_fov					 = 0
         scope_zoom_factor                = 120
         scope_texture                    =	
+		
 ![wpn_saiga12s_m1_pka_hud]
-        aim_hud_offset_pos               = -0.0522, 0.011131, 0.043476
-        aim_hud_offset_pos_16x9          = -0.0522, 0.011131, 0.043476
-        aim_hud_offset_rot               = 0.041429, 0.021603, 0.013292
-        aim_hud_offset_rot_16x9          = 0.041429, 0.021603, 0.013292
+        aim_hud_offset_pos               = -0.056797, 0.005697, -0.039415
+        aim_hud_offset_pos_16x9          = -0.056797, 0.005697, -0.039415
+        aim_hud_offset_rot               = 0.004437, -0.003198, 0
+        aim_hud_offset_rot_16x9          = 0.004437, -0.003198, 0
 		
 ![wpn_saiga12s_m1_1p78gs]
 	scope_texture			=
 	scope_status            = 1
 	scope_zoom_factor       = 42.86
 	zoom_rotate_time		= 0.25
+		
 ![wpn_saiga12s_m1_1p78gs_hud]
 item_visual             = dynamics\weapons\wpn_saiga12s_m1\wpn_saiga12s_m1_1p78_hud.ogf
-        aim_hud_offset_pos               = -0.05237, 0.001335, 0.015165
-        aim_hud_offset_pos_16x9          = -0.05237, 0.001335, 0.015165
-        aim_hud_offset_rot               = 0.040702, 0.021821, 0
-        aim_hud_offset_rot_16x9          = 0.040702, 0.021821, 0
+        aim_hud_offset_pos               = -0.065275, 0.004015, -0.066622
+        aim_hud_offset_pos_16x9          = -0.065275, 0.004015, -0.066622
+        aim_hud_offset_rot               = 0.003601, -0.00338, 0
+        aim_hud_offset_rot_16x9          = 0.003601, -0.00338, 0
 		
 ![wpn_saiga12s_m1_1pn93n2_1gs]
 	scope_texture			=
@@ -36,18 +41,20 @@ item_visual             = dynamics\weapons\wpn_saiga12s_m1\wpn_saiga12s_m1_1p78_
 	scope_status            = 1
 	scope_zoom_factor       = 30
 	zoom_rotate_time		= 0.25
+	
 	use_alt_aim_hud			= true
+	
 ![wpn_saiga12s_m1_1pn93n2_1gs_hud]
 item_visual             = dynamics\weapons\wpn_saiga12s_m1\wpn_saiga12s_m1_1pn93n2_hud.ogf
-        aim_hud_offset_pos               = -0.037712, -0.002599, 0.036637
-        aim_hud_offset_pos_16x9          = -0.037712, -0.002599, 0.036637
-        aim_hud_offset_rot               = 0.040701, 0.021432, 0
-        aim_hud_offset_rot_16x9          = 0.040701, 0.021432, 0
+        aim_hud_offset_alt_pos           = -0.067343, 0.028208, -0.074503
+        aim_hud_offset_alt_pos_16x9      = -0.067343, 0.028208, -0.074503
+		aim_hud_offset_alt_rot           = 0, 0, 0
+        aim_hud_offset_alt_rot_16x9      = 0, 0, 0
 
-        aim_hud_offset_alt_pos           = -0.054304, 0.024497, -0.027711
-        aim_hud_offset_alt_pos_16x9      = -0.054304, 0.024497, -0.027711
-        aim_hud_offset_alt_rot           = 0.033126, 0.024264, 0
-        aim_hud_offset_alt_rot_16x9      = 0.033126, 0.024264, 0
+        aim_hud_offset_pos               = -0.050892, 0.000523, -0.047002
+        aim_hud_offset_pos_16x9          = -0.050892, 0.000523, -0.047002
+        aim_hud_offset_rot               = 0.004146, -0.00298, 0
+        aim_hud_offset_rot_16x9          = 0.004146, -0.00298, 0
 		
 ![wpn_saiga12s_m1_1pn93]
 	scope_status            = 1
@@ -56,90 +63,112 @@ item_visual             = dynamics\weapons\wpn_saiga12s_m1\wpn_saiga12s_m1_1pn93
 	scope_dynamic_zoom		= on
 	scope_texture			=
 	scope_nightvision       =
+	
 	use_alt_aim_hud			= true
+	
 ![wpn_saiga12s_m1_1pn93_hud]
 item_visual             = dynamics\weapons\wpn_saiga12s_m1\wpn_saiga12s_m1_1pn93_hud.ogf
-        aim_hud_offset_pos               = -0.042048, -0.012744, 0.036918
-        aim_hud_offset_pos_16x9          = -0.042048, -0.012744, 0.036918
-        aim_hud_offset_rot               = 0.040717, 0.021262, 0
-        aim_hud_offset_rot_16x9          = 0.040717, 0.021262, 0
-		
-        aim_hud_offset_alt_pos           = -0.054304, 0.024497, -0.027711
-        aim_hud_offset_alt_pos_16x9      = -0.054304, 0.024497, -0.027711
-        aim_hud_offset_alt_rot           = 0.033126, 0.024264, 0
-        aim_hud_offset_alt_rot_16x9      = 0.033126, 0.024264, 0
+        aim_hud_offset_alt_pos           = -0.067343, 0.028208, -0.074503
+        aim_hud_offset_alt_pos_16x9      = -0.067343, 0.028208, -0.074503
+		aim_hud_offset_alt_rot           = 0, 0, 0
+        aim_hud_offset_alt_rot_16x9      = 0, 0, 0
+
+        aim_hud_offset_pos               = -0.055017, -0.009598, -0.044384
+        aim_hud_offset_pos_16x9          = -0.055017, -0.009598, -0.044384
+        aim_hud_offset_rot               = 0.003325, -0.003318, 0
+        aim_hud_offset_rot_16x9          = 0.003325, -0.003318, 0
 		
 ![wpn_saiga12s_m1_pso2]
 	scope_texture			=
 	scope_status            = 1
 	scope_zoom_factor       = 30
 	zoom_rotate_time		= 0.25
+	
 	use_alt_aim_hud			= true
+	
 ![wpn_saiga12s_m1_pso2_hud]
 item_visual             = dynamics\weapons\wpn_saiga12s_m1\wpn_saiga12s_m1_pso2_hud.ogf
-        aim_hud_offset_pos               = -0.040624, 0.002779, 0.036217
-        aim_hud_offset_pos_16x9          = -0.040624, 0.002779, 0.036217
-        aim_hud_offset_rot               = 0.039705, 0.019982, 0
-        aim_hud_offset_rot_16x9          = 0.039705, 0.019982, 0
-		
-        aim_hud_offset_alt_pos           = -0.054304, 0.024497, -0.027711
-        aim_hud_offset_alt_pos_16x9      = -0.054304, 0.024497, -0.027711
-        aim_hud_offset_alt_rot           = 0.033126, 0.024264, 0
-        aim_hud_offset_alt_rot_16x9      = 0.033126, 0.024264, 0
+        aim_hud_offset_alt_pos           = -0.067343, 0.028208, -0.074503
+        aim_hud_offset_alt_pos_16x9      = -0.067343, 0.028208, -0.074503
+		aim_hud_offset_alt_rot           = 0, 0, 0
+        aim_hud_offset_alt_rot_16x9      = 0, 0, 0
+
+        aim_hud_offset_pos               = -0.053072, 0.005556, -0.043344
+        aim_hud_offset_pos_16x9          = -0.053072, 0.005556, -0.043344
+        aim_hud_offset_rot               = 0.003065, -0.006115, 0
+        aim_hud_offset_rot_16x9          = 0.003065, -0.006115, 0
 		
 ![wpn_saiga12s_m1_ps01]
 	scope_texture			=
 	scope_status            = 1
 	scope_zoom_factor       = 30
 	zoom_rotate_time		= 0.25
+	
 	use_alt_aim_hud			= true
+	
 ![wpn_saiga12s_m1_ps01_hud]
 item_visual             = dynamics\weapons\wpn_saiga12s_m1\wpn_saiga12s_m1_pso1_hud.ogf
-        aim_hud_offset_pos               = -0.041648, 0.007785, 0.036075
-        aim_hud_offset_pos_16x9          = -0.041648, 0.007785, 0.036075
-        aim_hud_offset_rot               = 0.041125, 0.021264, 0
-        aim_hud_offset_rot_16x9          = 0.041125, 0.021264, 0
-		
-        aim_hud_offset_alt_pos           = -0.054304, 0.024497, -0.027711
-        aim_hud_offset_alt_pos_16x9      = -0.054304, 0.024497, -0.027711
-        aim_hud_offset_alt_rot           = 0.033126, 0.024264, 0
-        aim_hud_offset_alt_rot_16x9      = 0.033126, 0.024264, 0
+        aim_hud_offset_alt_pos           = -0.067343, 0.028208, -0.074503
+        aim_hud_offset_alt_pos_16x9      = -0.067343, 0.028208, -0.074503
+		aim_hud_offset_alt_rot           = 0, 0, 0
+        aim_hud_offset_alt_rot_16x9      = 0, 0, 0
 
+        aim_hud_offset_pos               = -0.054579, 0.010927, -0.039415
+        aim_hud_offset_pos_16x9          = -0.054579, 0.010927, -0.039415
+        aim_hud_offset_rot               = 0.004176, -0.003425, 0
+        aim_hud_offset_rot_16x9          = 0.004176, -0.003425, 0
+		
 ![wpn_saiga12s_m1_1p29]
 	scope_texture			=
 	scope_status            = 1
 	scope_zoom_factor       = 30
 	zoom_rotate_time		= 0.25
+	
 	use_alt_aim_hud			= true
+	
 ![wpn_saiga12s_m1_1p29_hud]
 item_visual             = dynamics\weapons\wpn_saiga12s_m1\wpn_saiga12s_m1_1p29_hud.ogf
-        aim_hud_offset_pos               = -0.053813, -0.008573, 0.01067
-        aim_hud_offset_pos_16x9          = -0.053813, -0.008573, 0.01067
-        aim_hud_offset_rot               = 0.041743, 0.020562, 0
-        aim_hud_offset_rot_16x9          = 0.041743, 0.020562, 0
+        aim_hud_offset_alt_pos           = -0.067343, 0.028208, -0.074503
+        aim_hud_offset_alt_pos_16x9      = -0.067343, 0.028208, -0.074503
+		aim_hud_offset_alt_rot           = 0, 0, 0
+        aim_hud_offset_alt_rot_16x9      = 0, 0, 0
 		
-        aim_hud_offset_alt_pos           = -0.054304, 0.024497, -0.027711
-        aim_hud_offset_alt_pos_16x9      = -0.054304, 0.024497, -0.027711
-        aim_hud_offset_alt_rot           = 0.033126, 0.024264, 0
-        aim_hud_offset_alt_rot_16x9      = 0.033126, 0.024264, 0
+        aim_hud_offset_pos               = -0.066675, -0.00527, -0.074529
+        aim_hud_offset_pos_16x9          = -0.066675, -0.00527, -0.074529
+        aim_hud_offset_rot               = 0.006755, -0.003863, 0
+        aim_hud_offset_rot_16x9          = 0.006755, -0.003863, 0		
+	
+![wpn_saiga12s_m1_usp1]
+	scope_texture			=
+	scope_status            = 1
+	scope_zoom_factor       = 30
+	zoom_rotate_time		= 0.25
+	
+	use_alt_aim_hud			= true
+	
+![wpn_saiga12s_m1_usp1_hud]
+item_visual             = dynamics\weapons\wpn_saiga12s_m1\wpn_saiga12s_m1_1p29_hud.ogf
+        aim_hud_offset_alt_pos           = -0.067343, 0.028208, -0.074503
+        aim_hud_offset_alt_pos_16x9      = -0.067343, 0.028208, -0.074503
+		aim_hud_offset_alt_rot           = 0, 0, 0
+        aim_hud_offset_alt_rot_16x9      = 0, 0, 0
 		
-![wpn_saiga12s_m1_pso1m21]:wpn_saiga12s_m1_pso2	
-1icon_layer			    = pso1m21			
-
-![wpn_saiga12s_m1_usp1]:wpn_saiga12s_m1_1p29
-1icon_layer			    = usp1	
-
+        aim_hud_offset_pos               = -0.066675, -0.00527, -0.074529
+        aim_hud_offset_pos_16x9          = -0.066675, -0.00527, -0.074529
+        aim_hud_offset_rot               = 0.006755, -0.003863, 0
+        aim_hud_offset_rot_16x9          = 0.006755, -0.003863, 0
+		
 ;----------------------------------------------------------------------------------------
 [wpn_saiga12s_m1_1p63]:wpn_saiga12s_m1
 hud				= wpn_saiga12s_m1_1p63_hud
+
 1icon_layer			    = 1p63
 1icon_layer_x			= 60
 1icon_layer_y			= -9
 
 [wpn_saiga12s_m1_1p63_hud]:wpn_saiga12s_m1_hud
 item_visual                	= dynamics\weapons\wpn_saiga12s_m1\wpn_saiga12s_m1_1p63_hud.ogf
-        aim_hud_offset_pos               = -0.052299, -0.01234, 0.036918
-        aim_hud_offset_pos_16x9          = -0.052299, -0.01234, 0.036918
-        aim_hud_offset_rot               = 0.042582, 0.022504, 0
-        aim_hud_offset_rot_16x9          = 0.042582, 0.022504, 0
-		
+        aim_hud_offset_pos               = -0.065744, -0.010448, -0.074503
+        aim_hud_offset_pos_16x9          = -0.065744, -0.010448, -0.074503
+        aim_hud_offset_rot               = -0.000852, -0.000371, 0
+        aim_hud_offset_rot_16x9          = -0.000852, -0.000371, 0
