--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_svu.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_svu.ltx
@@ -201,8 +201,26 @@ item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_1p59_hud.ogf
         aim_hud_offset_rot               = 0.068839, 0.033657, -0.009458
         aim_hud_offset_rot_16x9          = 0.068839, 0.033657, -0.009458	
 ;---------------------------------------------------------------------------------------------------
-[wpn_svu_pso1m21]:wpn_svu_pso2	
-1icon_layer			    = pso1m21			
+[wpn_svu_pso1m21]:wpn_svu
+hud                                      = wpn_svu_pso1m21_hud
+
+1icon_layer                              = pso1m21
+1icon_layer_x                            = 35
+1icon_layer_y                            = 0
+
+inv_weight                               = 4.75
+
+scope_status            = 1
+scope_zoom_factor       = 20
+zoom_rotate_time		= 0.25
+
+[wpn_svu_pso1m21_hud]:wpn_svu_hud
+
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_pso1m21_hud.ogf
+        aim_hud_offset_pos               = -0.053786, 0.021123, -0.18284
+        aim_hud_offset_pos_16x9          = -0.053786, 0.021123, -0.18284
+        aim_hud_offset_rot               = 0.069651, 0.032824, -0.025
+        aim_hud_offset_rot_16x9          = 0.069651, 0.032824, -0.025	
 ;---------------------------------------------------------------------------------------------------
 [wpn_svu_usp1]:wpn_svu_1p29
 1icon_layer			    = usp1	
