--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_val.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3dss_val.ltx
@@ -35,20 +35,20 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_rot_16x9      = 0.023608, 0.040251, -0.057
 		
 ![wpn_val_pso1m21]
-        scope_zoom_factor                = 30
+        scope_zoom_factor                = 20
         scope_texture                    =
 		use_alt_aim_hud					 = true
 ![wpn_val_pso1m21_hud]
-item_visual                	= anomaly_weapons\wpn_val\wpn_val_pso2_hud.ogf
+item_visual                	= anomaly_weapons\wpn_val\wpn_val_pso1m21_hud.ogf
         aim_hud_offset_alt_pos           = -0.062785, 0.04824, -0.018195
         aim_hud_offset_alt_pos_16x9      = -0.062785, 0.04824, -0.018195
         aim_hud_offset_alt_rot           = 0.006975, 0.036874, -0.057
         aim_hud_offset_alt_rot_16x9      = 0.006975, 0.036874, -0.057
 		
-        aim_hud_offset_pos               = -0.050686, 0.035607, -0.039376
-        aim_hud_offset_pos_16x9          = -0.050686, 0.035607, -0.039376
-        aim_hud_offset_rot               = 0.012478, 0.036165, -0.058393
-        aim_hud_offset_rot_16x9          = 0.012478, 0.036165, -0.058393
+        aim_hud_offset_pos               = -0.050764, 0.035607, -0.039376
+        aim_hud_offset_pos_16x9          = -0.050764, 0.035607, -0.039376
+        aim_hud_offset_rot               = 0.012603, 0.037711, -0.058393
+        aim_hud_offset_rot_16x9          = 0.012603, 0.037711, -0.058393
 		
 ![wpn_val_1p78gs]
         scope_zoom_factor                = 42.86
@@ -105,7 +105,6 @@ item_visual                	= anomaly_weapons\wpn_val\wpn_val_pso2_hud.ogf
         aim_hud_offset_rot               = 0.012622, 0.031806, -0.058393
         aim_hud_offset_rot_16x9          = 0.012622, 0.031806, -0.058393
 
-		
 ![wpn_val_1p59]
         scope_zoom_factor                = 12
 		min_scope_zoom_factor			 = 45		
