adjust some scopes

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3dss_gamma_scopes.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3dss_gamma_scopes.ltx
@@ -146,8 +146,8 @@
 	magnifications 		= 6	
 	
 ![1p59] --Dynamic, 3x-10x
-	s3ds_reticle_size 	= 4.2
-	s3ds_eye_relief 	= 5
+	s3ds_reticle_size 	= 4.6
+	s3ds_eye_relief 	= 4.7
 	s3ds_exit_pupil		= 0.75	
 	s3ds_ffp			= 1
 	s3ds_reticle_type 	= 5
@@ -279,14 +279,14 @@
 	magnifications		= 4
 	
 ![bravo4]	--4x
-	s3ds_reticle_size 	= 4.1
-	s3ds_eye_relief 	= 2
+	s3ds_reticle_size 	= 4.4
+	s3ds_eye_relief 	= 2.2
 	s3ds_exit_pupil		= 0.35	
 	magnifications 		= 4
 
 ![hamr]	--4x
-	s3ds_reticle_size 	= 4.3
-	s3ds_eye_relief 	= 1.9
+	s3ds_reticle_size 	= 4.7
+	s3ds_eye_relief 	= 2.2
 	s3ds_exit_pupil		= 0.35
 	s3ds_chroma_power	= 0.035
 	magnifications 		= 4
@@ -310,8 +310,8 @@
 	magnifications 		= 1,4
 	
 ![tac30]	--Dynamic, 1x-4x
-	s3ds_reticle_size 	= 4
-	s3ds_eye_relief 	= 2
+	s3ds_reticle_size 	= 4.3
+	s3ds_eye_relief 	= 2.1
 	s3ds_exit_pupil		= 0.4
 	s3ds_chroma_power	= 0.04	
 	magnifications 		= 1-4
@@ -370,7 +370,7 @@
 	magnifications 		= 1-6
 	
 ![ps320] --Dynamic, Rotating Scope, 1x OR 6x, zoom_step_count = 1
-	s3ds_reticle_size 	= 4.1
+	s3ds_reticle_size 	= 4.4
 	s3ds_eye_relief 	= 2.2
 	s3ds_ffp			= 1		
 	s3ds_chroma_power	= 0.045	
@@ -423,7 +423,7 @@
 	ms_count 			= 2
 	magnifications 		= 1-10
 	
-![cortex] --Dynamic
+![cortex] --Dynamic, 1x-12x
 	s3ds_reticle_size 	= 4
 	s3ds_eye_relief 	= 6
 	s3ds_exit_pupil		= 0.9	
