fix scope issue

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_weapon_addons_meowie.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_weapon_addons_meowie.ltx
@@ -11,7 +11,7 @@ monstrum                                     		= scope
 trihawk                                 			= scope
 p4x32                                        		= scope
 ps320                                        		= scope
-po434                                               = scope
+p434                                               = scope
 tac30                                        		= scope
 ado                                          		= scope
 echo1                                               = scope
